// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button styles should render a disabled button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
  disabled=""
>
  Button
</button>
`;

exports[`Button styles should render a giga button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 12px calc(32px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a kilo button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 4px calc(16px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a mega button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a primary button by default 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a secondary button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #FFFFFF;
  border-color: #9DA7B1;
  color: #323E49;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #FAFBFC;
  border-color: #5C656F;
}

.circuit-0:active {
  background-color: #EEF0F2;
  border-color: #5C656F;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a stretched button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
  width: 100%;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-0:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;

exports[`Button styles should render a tertiary button 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: transparent;
  border-color: transparent;
  color: #3388FF;
  padding: 8px calc(24px - 1px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  color: #1760CE;
}

.circuit-0:active {
  color: #003C8B;
}

<button
  class="circuit-0"
>
  Button
</button>
`;
